# worldVacBackend

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  api-document.md  main.py  pyproject.toml  spriteRenderer.js  uvicorn_logconfig.json
.github/workflows/: docker-image.yml
backend/spritesheet_generator/: annotation_params.py  auto_download.py  chooser_to_available_options.json
backend/utils/: __init__.py  commit_task.py  commit_tree.py  fork_task.py  fork_world.py  scene.py  scene_task.py  world_task.py
logger/: __init__.py
